# docs/swagger.json
@@ -13,6 +13,34 @@
     },
     "basePath": "/",
     "paths": {
+        "/bye": {
+            "get": {
+                "description": "get a bye message",
+                "consumes": [
+                    "text/plain"
+                ],
+                "produces": [
+                    "text/plain"
+                ],
+                "summary": "Get Bye",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Some Name",
+                        "name": "name",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/hello": {
             "get": {
                 "description": "get a hello message",
